WS_INTEGRATION/DX Sandbox/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AB_Aerospace_Engineering__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the Contact on Aerospace Engineering Advisory Board?</description>
        <inlineHelpText>Is the Contact on Aerospace Engineering Advisory Board?</inlineHelpText>
        <label>AB-Aerospace Engineering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB_Bioengineering__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the Contact on Bioengineering Advisory Board?</description>
        <inlineHelpText>Is the Contact on Bioengineering Advisory Board?</inlineHelpText>
        <label>AB-Bioengineering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB_CLAS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the Contact on CLAS Advisory Board?</description>
        <inlineHelpText>Is the Contact on CLAS Advisory Board?</inlineHelpText>
        <label>AB-CLAS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB_Chemical_Petroleum_Engineering__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the Contact on Chemical &amp; Petroleum Engineering Advisory Board?</description>
        <inlineHelpText>Is the Contact on Chemical &amp; Petroleum Engineering Advisory Board?</inlineHelpText>
        <label>AB-Chemical &amp; Petroleum Engineering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB_Civil_Environmental_Arch_Engg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the Contact On Civil, Environmental &amp; Architectural Engineering Advisory Board?</description>
        <inlineHelpText>Is the Contact On Civil, Environmental &amp; Architectural Engineering Advisory Board?</inlineHelpText>
        <label>AB-Civil, Environmental &amp; Arch. Engg.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB_ElectricalEngg_ComputerScience__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the Contact On Electrical Engineering &amp; Computer Science Advisory Board?</description>
        <inlineHelpText>Is the Contact On Electrical Engineering &amp; Computer Science Advisory Board?</inlineHelpText>
        <label>AB-ElectricalEngg. &amp; ComputerScience</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB_Geology__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the Contact on Geology Advisory Board?</description>
        <inlineHelpText>Is the Contact on Geology Advisory Board?</inlineHelpText>
        <label>AB-Geology</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB_KUCTC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the Contact on KUIC Advisory Board?</description>
        <inlineHelpText>Is the Contact on KUIC Advisory Board?</inlineHelpText>
        <label>AB-KUIC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB_Mechanical_Engineering__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the Contact On Mechanical Engineering Advisory Board?</description>
        <inlineHelpText>Is the Contact On Mechanical Engineering Advisory Board?</inlineHelpText>
        <label>AB-Mechanical Engineering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB_Pharmacy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the Contact on the Pharmacy Advisory Board?</description>
        <inlineHelpText>Is the Contact on the Pharmacy Advisory Board?</inlineHelpText>
        <label>AB-Pharmacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB_School_of_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the Contact On School of Business Advisory Board?</description>
        <inlineHelpText>Is the Contact On School of Business Advisory Board?</inlineHelpText>
        <label>AB-School of Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB_School_of_Education__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the Contact on School of Education Advisory Board?</description>
        <inlineHelpText>Is the Contact on School of Education Advisory Board?</inlineHelpText>
        <label>AB-School of Education</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Name_Search__c</fullName>
        <description>Text field that allows for search of contacts by account name. Filled in by the analytics process. Not to be added to page layout.</description>
        <label>Account Name Search</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <description>Contacts&apos; Address for communication - Line 1</description>
        <label>Address Line 1</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <description>Contact Communication Address Line 2</description>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advisory_Boards__c</fullName>
        <description>This field tracks any advisory boards that this contact may be a member of.</description>
        <inlineHelpText>Press Ctrl to select more than one board.</inlineHelpText>
        <label>Advisory Boards</label>
        <picklist>
            <picklistValues>
                <fullName>Aerospace Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bioengineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical &amp; Petroleum Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil, Environmental &amp; Arch Engg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College of Liberal Arts &amp; Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Engg &amp; Computer Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KU Innovation &amp; Collaboration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School of Business - Accounting and IS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School of Business - Career Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School of Business - Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School of Business - Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School of Business - Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School of Business - MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School of Business - Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School of Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School of Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School of Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering Career Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edwards Campus Board of Advisors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edwards Campus Workforce Advisory Board</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Case_Insensitive_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Case Insensitive ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Contact Address City</description>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Count__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Contact Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Owner__c</fullName>
        <description>Shows the primary ownership of the contact. This is defined by the DB hierarchy. Formula field within SF.</description>
        <formula>IF( Corporate_Partnership_Ownership__c =TRUE, &quot;Corporate Partnerships&quot;,
IF(  Licensing_Contact__c = TRUE, &quot;Licensing&quot;, 
IF( NOT ( ISBLANK( XID_Peoplesoft__c ) ), &quot;Research&quot;,
IF( NOT ( ISBLANK( XID_Advance__c ) ), &quot;Endowment&quot;,
IF( NOT ( ISBLANK( XID_Wellspring__c ) ), &quot;Tech Transfer&quot;,
IF( NOT ( ISBLANK( XID_Symplicity__c ) ), &quot;Career Services&quot;,
IF( NOT ( ISBLANK( XID_Reggie__c ) ), &quot;Continuing Education&quot;,
&quot;Not Defined&quot;)))))))</formula>
        <inlineHelpText>Shows the primary ownership of the contact. This is defined by KUIC.</inlineHelpText>
        <label>Contact Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Services__c</fullName>
        <description>Services for getting in touch with the Contact</description>
        <inlineHelpText>Services for getting in touch with the Contact</inlineHelpText>
        <label>Contact Services</label>
        <picklist>
            <picklistValues>
                <fullName>Careerfair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Mentee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Sessions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Postings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Campus Recruiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile Viewable Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resume Book</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contact_Source_KU_Division__c</fullName>
        <description>The KU Division that the data is received from</description>
        <inlineHelpText>The KU Division that the data is received from</inlineHelpText>
        <label>Contact Owners</label>
        <picklist>
            <picklistValues>
                <fullName>Career Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Center for Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continuing Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Partnerships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endowment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contact_Source_System_ID__c</fullName>
        <description>Unique ID from the source system where the Contact originated from</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique ID from the source system where the Contact originated from</inlineHelpText>
        <label>Contact Source System ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Source_System__c</fullName>
        <description>Source System From Where The Contact Was Imported</description>
        <inlineHelpText>Source System From Where The Contact Was Imported</inlineHelpText>
        <label>Contact Source System</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate Partnerships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sophia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peoplesoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Symplicity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reggie</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Type_Banner__c</fullName>
        <description>Formula that displays a small banner on the page that correlates to the type of contact it is.</description>
        <formula>IF(  RecordTypeId = &apos;012i00000015Qwk&apos;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015i0000009lgzE&quot;,&quot;Internal&quot;, 50, 300),IF (  Account.Corporate_Partnership_Ownership__c  = TRUE, IMAGE(&quot;/servlet/servlet.FileDownload?file=015i0000009lho2&quot;, &quot;Partner&quot;, 50, 300), &apos;External Contact&apos;))</formula>
        <label>Contact Type Banner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Partnership_Ownership__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to denote ownership by Corporate Partnership. This field is manually maintained by KUIC. This field defines update hierarchy in the integration.</description>
        <inlineHelpText>This contact is maintained by Corporate Partnership, and updates from other databases will not change the data on this contact.</inlineHelpText>
        <label>Corporate Partnership Ownership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Contact Address Country</description>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomID__c</fullName>
        <description>Custom ID created to track all KU Contacts.</description>
        <externalId>true</externalId>
        <label>CustomID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Chair__c</fullName>
        <label>Department Chair</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Number__c</fullName>
        <label>Department Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Endowment_Last_Contacted_Date__c</fullName>
        <description>When was the last interaction on Endowment  with thisContact</description>
        <inlineHelpText>When was the last interaction on Endowment  with thisContact</inlineHelpText>
        <label>Endowment Last Contacted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Invitations__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box will be checked by users to show whether this contact should get invitations to local events held at KU.</description>
        <inlineHelpText>Should this contact receive invites to events held here at KU?</inlineHelpText>
        <label>Event Invitations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Electronic_Communications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Communications about KUIC, KU, or other mass mailing emails.</description>
        <inlineHelpText>Communications about KUIC, KU, or other mass mailing emails.</inlineHelpText>
        <label>External Electronic Communications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hubspot_Track_Code__c</fullName>
        <description>Track code for Hubspot.com. The related list for Hubspot intelligence will work with or without this information.</description>
        <label>Hubspot Track Code</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_KU_Alumnus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate that the Contact is an Alumnus</description>
        <inlineHelpText>Please select the Checkbox to indicate that this Contact is a KU alumnus</inlineHelpText>
        <label>Is KU Alumnus?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Key_Leadership_Alumni__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked If the Contact is an Alumnus who is in a Key/Leadership Position at the Company</description>
        <inlineHelpText>Checked If the Contact is an Alumnus who is in a Key/Leadership Position at the Company</inlineHelpText>
        <label>Is Key/Leadership Alumnus?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KU_Relationship__c</fullName>
        <description>Picklist defining the role this person has within KU. Dependent upon the KU Affiliations field.</description>
        <label>KU Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Faculty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Not-for-Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Company</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Source_System__c</fullName>
        <description>Where the contact originated when it was a lead. Usually filled in by data.com or HubSpot.</description>
        <inlineHelpText>Where the contact originated when it was a lead. Usually filled in by data.com or HubSpot.</inlineHelpText>
        <label>Lead Source System</label>
        <picklist>
            <picklistValues>
                <fullName>Data.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pardot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tremonti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Length_Relationship_In_Contact_Level__c</fullName>
        <formula>IF( 
AND( 
ISNULL( Endowment_Last_Contacted_Date__c  ), 
ISNULL( Source_System_Created_Date__c ), 
ISNULL( Source_System_Last_Modified_Date__c )
), 
0, 
MAX( 
IF(ISNULL( Endowment_Last_Contacted_Date__c ),0,TODAY() - Endowment_Last_Contacted_Date__c ), 
IF(ISNULL( Source_System_Created_Date__c ),0,TODAY() - Source_System_Created_Date__c ), 
IF(ISNULL( Source_System_Last_Modified_Date__c ),0,TODAY() - Source_System_Last_Modified_Date__c ) 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Length Relationship In Contact Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Licensing_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Runs from a process, used to determine contact owner.</description>
        <label>Licensing Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MACleanCity__c</fullName>
        <label>Clean City (MapAnything)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACleanCountry__c</fullName>
        <label>Clean Country (MapAnything)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACleanCounty__c</fullName>
        <label>Clean County (MapAnything)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACleanDistrict__c</fullName>
        <label>Clean District (MapAnything)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACleanPostalCode__c</fullName>
        <label>Clean Postal Code (MapAnything)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACleanState__c</fullName>
        <label>Clean State (MapAnything)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACleanStreet__c</fullName>
        <label>Clean Street (MapAnything)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MALatitude__c</fullName>
        <label>Latitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MALongitude__c</fullName>
        <label>Longitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MAQuality__c</fullName>
        <label>Quality (MapAnything)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MASimilarity__c</fullName>
        <label>Similarity (MapAnything)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MASkipGeocoding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Geocoding (MapAnything)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MAVerifiedLatitude__c</fullName>
        <label>Verified Latitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MAVerifiedLongitude__c</fullName>
        <label>Verified Longitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nametag_Department__c</fullName>
        <description>Allows contacts to create a text field to display their department or company to be displayed on nametags for events</description>
        <label>Nametag Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Communication__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box will be checked by users to show whether this contact should get marketing information at the national level.</description>
        <inlineHelpText>Should this contact receive marketing material at the national level?</inlineHelpText>
        <label>National Communication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RU_KUCTC_Count__c</fullName>
        <description>This field is set as 1 if the Contact is selected to be on the KUCTC Board &quot;AB-KUCTC&quot;</description>
        <formula>IF(AND(AB_KUCTC__c=True, RecordType.Name= &apos;External Contacts&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is set as 1 if the Contact is selected to be on the KUCTC Board &quot;AB-KUCTC&quot;</inlineHelpText>
        <label>RU KUCTC Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RU_Key_Alumni_Count__c</fullName>
        <description>This is set to 1 if Is Key/Leadership Alumni? is Checked</description>
        <formula>IF((Is_Key_Leadership_Alumni__c=True),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is set to 1 if Is Key/Leadership Alumni? is Checked</inlineHelpText>
        <label>RU Key Alumni Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RU_Main_Count_Contact__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Used by Rollup Helper to calculate the Total number of Contacts</description>
        <inlineHelpText>Used by Rollup Helper to calculate the Total number of Contacts</inlineHelpText>
        <label>RU Main Count Contact</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Regional_Communication__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box will be checked by users to show whether this contact should get marketing information at the regional level.</description>
        <inlineHelpText>Should this contact get marketing communication at the regional level?</inlineHelpText>
        <label>Regional Communication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Research_to_Patent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates this person to be invited to R2P events</description>
        <inlineHelpText>Should this person be invited to R2P events?</inlineHelpText>
        <label>Research to Patent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <description>Information filled in by Data.com. Pulled from the lead information.</description>
        <inlineHelpText>Information filled in by Data.com. Pulled from the lead information.</inlineHelpText>
        <label>SIC Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Description__c</fullName>
        <description>Information filled in from Data.com.</description>
        <inlineHelpText>Information filled in from Data.com.</inlineHelpText>
        <label>SIC Description</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source_System_Created_Date__c</fullName>
        <description>Date the record was created in the corresponding source system</description>
        <inlineHelpText>Date the record was created in the corresponding source system</inlineHelpText>
        <label>Source System Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source_System_Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this contact has been deleted from the Source System.</description>
        <label>Source System Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_System_Last_Modified_Date__c</fullName>
        <description>Date when the source system record was last modified in the source system</description>
        <inlineHelpText>Date when the source system record was last modified in the source system</inlineHelpText>
        <label>Source System Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Startup_Showcase__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This person is designated to be invited to the startup showcase events</description>
        <inlineHelpText>Should this person be invited to Startup Showcase events?</inlineHelpText>
        <label>Startup Showcase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <description>Contact Address State/Province</description>
        <label>State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Symplicity_Create_Date__c</fullName>
        <description>Date the record was created in Symplicity, the system of record for Career Services. This field is filled in by the integration and is not editable.</description>
        <inlineHelpText>Date the record was created in Symplicity, the system of record for Career Services.</inlineHelpText>
        <label>Symplicity Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Symplicity_Last_Modified_Date__c</fullName>
        <description>Date the record was last modified in Symplicity, the system of record for Career Services. This field is filled in by the integration and is not editable.</description>
        <inlineHelpText>Date the record was last modified in Symplicity, the system of record for Career Services</inlineHelpText>
        <label>Symplicity Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tech_Tuesday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks the contact as someone to be invited to Tech Tuesdays</description>
        <inlineHelpText>Invite this person to Tech Tuesday events?</inlineHelpText>
        <label>Tech Tuesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wellspring_Create_Date__c</fullName>
        <description>Date the record was created in Wellspring/Sophia, the system of record for Tech Transfer. This field is filled in by the integration and is not editable.</description>
        <inlineHelpText>Date the record was created in Wellspring/Sophia, the system of record for Tech Transfer.</inlineHelpText>
        <label>Wellspring Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Wellspring_Last_Modified_Date__c</fullName>
        <description>Date the record was last modified in Wellspring/Sophia, the system of record for Tech Transfer. This field is filled in by the integration and is not editable.</description>
        <inlineHelpText>Date the record was last modified in Wellspring/Sophia, the system of record for Tech Transfer.</inlineHelpText>
        <label>Wellspring Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>XID_Advance__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used to store the unique identified used to match records with the Endowment system, Advance</description>
        <externalId>true</externalId>
        <inlineHelpText>Advance External ID</inlineHelpText>
        <label>XID Advance</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>XID_Peoplesoft__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used to store the Unique Identifier used to match this record with Center for Research data, Peoplesoft. This data is sensitive and not visible to anyone but the admin.</description>
        <externalId>true</externalId>
        <inlineHelpText>Peoplesoft External ID. This data is sensitive and not visible to anyone but the admin.</inlineHelpText>
        <label>XID Peoplesoft</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>XID_Reggie__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used to store the unique identifier from the Continuing Education system, Reggie</description>
        <externalId>true</externalId>
        <inlineHelpText>Reggie External ID</inlineHelpText>
        <label>XID Reggie</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>XID_Symplicity__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used to store the unique identified used to match records with the Career Services system, Symplicity.</description>
        <externalId>true</externalId>
        <inlineHelpText>Career Services External ID</inlineHelpText>
        <label>XID Symplicity</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>